# doom-demon-slayer

./: CMakeLists.txt  README.md
doom-demon-slayer/assets/scenes/: main.mtl
doom-demon-slayer/assets/shaders/: hud.frag  hud.vert  sky.frag  sky.vert  sprite3d.frag  sprite3d.vert  textured_lighting.frag  textured_lighting.vert
src/: assets.c  doom.c  doom.h  gfx.c  math.c  sprite3d.c
